                         CHANGES version 3.2

              This file summarizes changes made since 1.0

Version 3.2
-----------
* New: Support prefetch rows for MySQL and Oracle. Thanks to dragon
  jiang <jianlinlong@gmail.com> for the suggestion and pull request
* New: MySQL 5.7 and later. Added session query timeout accessible
  via Connection_setQueryTimeout()
* New: MySQL 8. Added new URL option 'auth-plugin' which
  specify the authentication_plugin to use.
* New: Oracle: New URL option 'sysdba' for connecting with sysdba
  privileges.
* Fixed: Remove last SQL terminator character ';' in statements, except
  if preceded with END; to allow for ending a pl/sql block.
* Fixed: Oracle: Set SQL null value in prepared statement
* Fixed: Oracle: Handle date/time literal values

Version 3.1
-----------
* New: Support Literal IPv6 Addresses in URL, RFC2732. You can now
  use an IPv6 address as host in URL as long as it is enclosed in
  brackets, e.g. mysql://[2001:db8:85a3::8a2e:370:7334]:3306/test
  Requires that linked database libs supports IPv6. MySQL 5.x, 
  Postgres 9.x and Oracle 11.x or later versions should be fine.
* New: Honour timezone information if provided with date-time column
  values. Previous version assumed date-time information to be in UTC
  (which is the usual case).
* Fixed: #7 Removed onstop handler which called third-party database
  libraries shutdown method. This could cause a problem for MySQL and
  SQLite if more than one Connection Pool was used as the onstop handler
  was called in ConnectionPool_stop() and thereby would render other
  live Connection Pools invalid as the underlying library was shutdown.
* Fixed: #8 Do not remove a trailing SQL termination charachter ';' from
  the SQL statement.

Version 3.0
-----------
* New: Methods for retrieving Date, Time, DateTime and TimeStamp column
  values from a ResultSet. PreparedStatement_setTimestamp for setting
  Unix timestamp.