@@ -74,7 +74,7 @@ const char *OraclePreparedStatement_getLastError(int err, OCIError *errhp) {
                 case OCI_SUCCESS:
                         return "";
                 case OCI_SUCCESS_WITH_INFO:
-                        return "Error - OCI_SUCCESS_WITH_INFO";
+                        return "Info - OCI_SUCCESS_WITH_INFO";
                         break;
                 case OCI_NEED_DATA:
                         return "Error - OCI_NEED_DATA";
